Private messages: fix emojis, fix message wrap, update ionicons

--- a/src/components/elements/messages/Message/Message.css
+++ b/src/components/elements/messages/Message/Message.css
@@ -1,7 +1,8 @@
 .message {
     display: flex;
     flex-direction: column;
-    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .message .timestamp {
@@ -30,13 +31,13 @@
 }
 
 .message.start .bubble-container .bubble {
-    /* margin-top: 10px; */
+    margin-top: 10px;
     border-top-left-radius: 20px;
 }
 
 .message.end .bubble-container .bubble {
     border-bottom-left-radius: 20px;
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px;
 }
 
 .message.mine.start .bubble-container .bubble {
