--- a/src/containers/messages/MessageList/MessageList.css
+++ b/src/containers/messages/MessageList/MessageList.css
@@ -3,6 +3,14 @@
     padding-bottom: 70px;
 }
 
+.emoji-picker-tooltip {
+    display: block !important;
+    position: absolute;
+    z-index: 1;
+    bottom: 80%;
+    left: 0px;
+}
+
 .emoji-picker-tooltip:not(.shown) {
-    display: none;
+    display: none !important;
 }
